fix(layout): Make Vision boxes aligned

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -102,10 +102,12 @@ footer {
 
 // Card customizations
 .card {
+  height: 95%;
   .card-header {
     background-color: $primary;
     color: white;
     font-weight: 700;
+    font-size: 1.1vw;
     text-align: center;
     text-shadow: 1px 1px 2px black;
   }
@@ -114,6 +116,7 @@ footer {
     text-align: calc();
     text-shadow: 0px 0px 0px;
     font-size: 1.2rem;
+    font-size: 1.1vw;
   }
 }
 
